--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,12 @@ body {
 }
 
 h1 {
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   background-color:pink;
-  color:violet;
+  color:white;
 }
 
 p {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color:white;
 }
