--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,12 @@ body {
 }
 
 h1 {
-  font-family: Impact;
+  font-family:Arial, Helvetica, sans-serif;
   background-color:pink;
   color:white;
 }
 
 p {
-  font-family: Arial;
+  font-family:Arial, Helvetica, sans-serif;
   color:white;
 }
