--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  font-family:Arial, Helvetica, sans-serif;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   background-color:pink;
   color:white;
 }
