--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,14 @@ h1 {
   font-size: 75px;
 }
 
-p {
+p1 {
   font-family:Arial, Helvetica, sans-serif;
   color:white;
   font-size: 50px;
+}
+
+p2 {
+  font-family:Arial, Helvetica, sans-serif;
+  color:white;
+  font-size:40px;
 }
