--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,13 @@ h1 {
   font-size: 75px;
 }
 
-p1 {
+p {
   font-family:Arial, Helvetica, sans-serif;
   color:white;
   font-size: 50px;
 }
 
-p2 {
+p {
   font-family:Arial, Helvetica, sans-serif;
   color:white;
   font-size:20px;
