--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 p {
-  font-family:'Arial, Helvetica, sans-serif';
+  font-family:Arial, Helvetica, sans-serif;
   color:white;
   font-size: 30px;
 }
