--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,16 @@ body {
 }
 
 h1 {
+  text-align: center;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   background-color:pink;
   color:red;
   font-size: 75px;
+  border: 2px violet;
 }
 
 p {
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color:white;
   font-size: 30px;
 }
