--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color:black;
+  background-color:slategrey;
 }
 
 h1 {
@@ -12,6 +12,7 @@ h1 {
 }
 
 p {
+  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   color:white;
   font-size: 30px;
