--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,10 @@ p {
   color:white;
   font-size: 30px;
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
